2nd Commit - Shared Layout Footer View

--- a/ProjectPortfolio/Views/Shared/Error.cshtml
+++ b/ProjectPortfolio/Views/Shared/Error.cshtml
@@ -1,9 +1,11 @@
-﻿@model System.Web.Mvc.HandleErrorInfo
+﻿@model System.Web.Mvc.HandleErrorInfo  
 
-<div>
+<div id="#error_view">
 	<h2>An error occurred while processing your request.</h2>
+	<img src="~/Images/imgHomerError.png" alt="Image of Homer Simpon running around a green screen!"/>
 	<p>
 		Please resubmit your request. If the problem persists, please contact 
-		John Mulhall at johnmlhll@yahoo.com for technical support.
+		John Mulhall at johnmlhll@yahoo.com for technical support. 
+		As you can see from the image, Homer is not available after messing up our site!
 	</p>
 </div>
