--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -1,1 +1,5 @@
-﻿<h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
+﻿@{
+    ViewBag.Title = "Home";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+<h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
