--- a/ProjectPortfolio/Content/Style.css
+++ b/ProjectPortfolio/Content/Style.css
@@ -57,7 +57,7 @@ footer hr {
     margin: 1% auto;
 }
 
-/*Left Hand Side*/
+/*Left of Footer*/
 #logo {
     float: left;
     width: 17%;
@@ -65,6 +65,8 @@ footer hr {
 }
 
 #footer_shares_linkedin {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     margin: 2% 0 0 10.5%;
     list-style-type: none;
 }
@@ -76,10 +78,12 @@ footer hr {
 
 /*Middle of Footer*/
 #footer_contact_details {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     list-style-type: none;
     font-weight: normal;
     text-align: center;
-    margin: -5% auto;
+    margin: -5% 2% 0 0;
 }
 
     #footer_contact_details li a {
@@ -89,24 +93,27 @@ footer hr {
         #footer_contact_details li a img {
             width: 9%;
             min-width: 6%;
+            padding-top: 0.5%;
         }
 
- /*Left of Footer*/
+ /*Right of Footer*/
 #footer_shares_twitter { /*also Styles Facebook share button*/
-    box-sizing: content-box;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     list-style-type: none;
     float: right;
-    margin: -3% 2% 2% 3%;
+    margin: -8% 2% 2% 3%;
     display: block;
 }
 
     #footer_shares_twitter li a {
         position: relative;
-        padding: 1%;
+        padding-bottom: 2%;
+        width: 100%;
+        resize: both;
     }
 
         #footer_shares_twitter li a img {
-            width: 100%;
             border-radius: 12%;
         }
 
