--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -32,17 +32,17 @@
 			<!--Left hand side of footer-->
 		    <a id="logo"><img src="~/Images/imgMulhallFamilyCrest.png" alt="Image of the Mulhall Family Crest"/></a>
 		    <ul id="footer_shares_linkedin">
+			    <li>
+                    <a href="https://plus.google.com/share?url=https://jmulhall.azurewebsites.net/@ViewBag.Title" target="_blank">
+                        <img src="~/Images/imgShareGooglePlus.png"/>
+                    </a> 
+                </li>
                 <li>
                     <a>
 						<script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
                         <script type="IN/Share" data-url="https://jmulhall.azurewebsites.net"></script>
 					</a> 
 				</li>
-				<li>
-                    <a href="https://plus.google.com/share?url=https://jmulhall.azurewebsites.net/@ViewBag.Title" target="_blank">
-                        <img src="~/Images/imgShareGooglePlus.png"/>
-					</a> 
-                </li>
             </ul>  
 			<!--Center of footer-->
             <ul id="footer_contact_details">
@@ -52,9 +52,10 @@
 					<a href="https://twitter.com/johnmlhll" target="_blank"><img src="~/Images/imgConnectTwitter.png" alt="Twitter Profile Link of John Mulhall"/></a>
 				    <a href="https://www.linkedin.com/in/johnmlhll/" target="_blank"><img src="~/Images/imgConnectLinkedIn.png" alt="LinkedIn Profile Link of John Mulhall"/></a>
 				</li>
-				<li><a><sub>&copy; John Mulhall 2017</sub></a></li>	
+                <li><a><sub>&copy; John Mulhall 2017</sub></a></li> 
 			</ul>
 			<!--Right Hand Side of footer-->
+			<div id="twitter_container">	
 			<ul id="footer_shares_twitter">
 				<li>
 					<a href="http://www.Twitter.com/share" data-count="vertical" target="_blank"><img src="~/Images/imgShareTwitter.png" alt="Image of Twitter Share Icon for Page"/></a>
@@ -62,7 +63,8 @@
 				<li>
 					<a href="http://www.Facebook.com/sharer.php?u=https://jmulhall.azurewebsites.net/@ViewBag.Title" target="_blank"><img src="~/Images/imgShareFacebook.png"/></a>
 				</li>
-			</ul>  	
+			</ul>
+			</div>
 		</footer>
 	</div>
 </body>
