--- a/ProjectPortfolio/Content/Style.css
+++ b/ProjectPortfolio/Content/Style.css
@@ -4,10 +4,23 @@
 /*General Styling*/
 body {
     margin: 0 auto;
+    background-image: url("https://www.pixelstalk.net/wp-content/uploads/2016/10/Image-of-Binary-Code.jpg");
+    background-repeat:space;
+    background-color: #f9fcfc;
 }
 
 #wrapper {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     margin: 1% auto;
+    width: 93%;
+    padding: 2%;
+    border-radius: 7%;
+    position: relative;
+    background: -webkit-linear-gradient(#f9fcfc, #a2d6d6);
+    background: -o-linear-gradient(#f9fcfc, #a2d6d6);
+    background: -moz-linear-gradient(#f9fcfc, #a2d6d6);
+    background: linear-gradient(#f9fcfc, #a2d6d6);
 }
 
 h1 {
@@ -29,6 +42,7 @@ h3, h4, h5, h6 {
 p {
     font-size: 1em;
     line-height: normal;
+    text-align: left;
 }
 
 ul li {
@@ -48,6 +62,7 @@ ul li {
 /*Footer*/
 
 footer {
+    position: relative;
     width: 100%;
     resise: both;
 }
@@ -60,7 +75,7 @@ footer hr {
 /*Left of Footer*/
 #logo {
     float: left;
-    width: 17%;
+    width: 19%;
     margin: 0.5% 0.5% 0 2%;
 }
 
@@ -69,53 +84,63 @@ footer hr {
     -webkit-box-sizing: border-box;
     margin: 2% 0 0 10.5%;
     list-style-type: none;
-}
+    }
 
-    #footer_shares_linkedin li img {
-           border-radius: 12%;
-           width: 12%;
+    #footer_shares_linkedin li a img {
+        border-radius: 40% 40% 0 0;
+        width: 13%;
+        border: ridge;
+        border-color: lightgray;
+        padding-top: 0.1%;
     }
 
 /*Middle of Footer*/
 #footer_contact_details {
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    box-sizing: content-box;
+    -webkit-box-sizing: content-box;
     list-style-type: none;
     font-weight: normal;
     text-align: center;
-    margin: -5% 2% 0 0;
-}
+    margin: -5% 4% 0 0;
+    }
 
     #footer_contact_details li a {
         font-size: 1em;
     }
 
         #footer_contact_details li a img {
-            width: 9%;
-            min-width: 6%;
+            width: 10%;
+            min-width: 40px;
             padding-top: 0.5%;
         }
 
- /*Right of Footer*/
-#footer_shares_twitter { /*also Styles Facebook share button*/
+    #footer_contact_details li a sub {
+        padding-left: 2%; /*centers copyright under centact details*/
+    }
+
+/*Right of Footer*/
+#twitter_container {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    list-style-type: none;
     float: right;
-    margin: -8% 2% 2% 3%;
+    width: 16%;
+    margin: -12% 2% 2% 3%;
+}
+
+#footer_shares_twitter { /*also Styles Facebook share button*/
+    list-style-type: none;
+    padding-bottom: 1%;
     display: block;
 }
 
-    #footer_shares_twitter li a {
+    #footer_shares_twitter li a img {
         position: relative;
-        padding-bottom: 2%;
-        width: 100%;
         resize: both;
+        width: 100%;
+        border-radius: 40% 40% 0 0;
+        border: ridge;
+        border-color: lightgray;
     }
-
-        #footer_shares_twitter li a img {
-            border-radius: 12%;
-        }
 
 /* Restricted Styling - 768px max Screen*/
 @media only and (max-width: 768px) {
