9th Commit - Update Layout.cshtml Code

--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -49,21 +49,29 @@
 			    <li><a><strong>Email:</strong> johnmlhll@yahoo.com</a></li>
 				<li><a><strong>Mobile:</strong> +353 (0) 86 231 7352</a></li>
 				<li>
-					<a href="https://twitter.com/johnmlhll" target="_blank"><img src="~/Images/imgConnectTwitter.png" alt="Twitter Profile Link of John Mulhall"/></a>
-				    <a href="https://www.linkedin.com/in/johnmlhll/" target="_blank"><img src="~/Images/imgConnectLinkedIn.png" alt="LinkedIn Profile Link of John Mulhall"/></a>
+					<a href="https://twitter.com/johnmlhll" target="_blank">
+						<img src="~/Images/imgConnectTwitter.png" alt="Twitter Profile Link of John Mulhall"/>
+					</a>
+				    <a href="https://www.linkedin.com/in/johnmlhll/" target="_blank">
+						<img src="~/Images/imgConnectLinkedIn.png" alt="LinkedIn Profile Link of John Mulhall"/>
+					</a>
 				</li>
                 <li><a><sub>&copy; John Mulhall 2017</sub></a></li> 
 			</ul>
 			<!--Right Hand Side of footer-->
 			<div id="twitter_container">	
-			<ul id="footer_shares_twitter">
-				<li>
-					<a href="http://www.Twitter.com/share" data-count="vertical" target="_blank"><img src="~/Images/imgShareTwitter.png" alt="Image of Twitter Share Icon for Page"/></a>
-				</li>
-				<li>
-					<a href="http://www.Facebook.com/sharer.php?u=https://jmulhall.azurewebsites.net/@ViewBag.Title" target="_blank"><img src="~/Images/imgShareFacebook.png"/></a>
-				</li>
-			</ul>
+    			<ul id="footer_shares_twitter">
+    				<li>
+    					<a href="http://www.Twitter.com/share" data-count="vertical" target="_blank">
+    						<img src="~/Images/imgShareTwitter.png" alt="Image of Twitter Share Icon for Page"/>
+    					</a>
+    				</li>
+    				<li>
+    					<a href="http://www.Facebook.com/sharer.php?u=https://jmulhall.azurewebsites.net/@ViewBag.Title" target="_blank">
+    						<img src="~/Images/imgShareFacebook.png"/>
+    					</a>
+    				</li>
+    			</ul>
 			</div>
 		</footer>
 	</div>
