--- a/ProjectPortfolio/Views/Home/Index.cshtml
+++ b/ProjectPortfolio/Views/Home/Index.cshtml
@@ -4,12 +4,24 @@
 }
 <div id="welcome">
 <h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
-<h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
-	<h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
-	<h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
+    <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et enim finibus, fringilla tortor vitae, aliquam leo.
+    </p>
 </div>
 <div id="software_portfolio">
 <h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
-<h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
-<h2>Welcome to ASP.NET MVC @ViewData["Version"] on @ViewData["Runtime"]!</h2>
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/8Gn8VkOoQiY" frameborder="0" allowfullscreen></iframe>
+	
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et enim finibus, fringilla tortor vitae, aliquam leo. Nulla tristique lorem ac mi vulputate euismod egestas hendrerit nibh. Morbi faucibus sapien ut erat scelerisque fringilla. Phasellus quis dui a diam gravida maximus. Aenean posuere ante dolor, vel placerat justo aliquam a. Sed tristique malesuada lectus, eget blandit diam tempus nec. Aliquam sed quam quis ligula accumsan molestie tincidunt id massa. Nulla eget est a metus blandit interdum sed id enim. Curabitur eu ligula est. Nulla facilisi. Sed sed vestibulum neque.
+
+        Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam arcu purus, sagittis sit amet viverra id, sodales sit amet mauris. Nam lacinia elit vitae tellus aliquam, in placerat ipsum scelerisque. Maecenas sed diam velit. Donec eleifend, ligula nec fermentum cursus, massa tortor porttitor tortor, eu pretium purus ipsum vitae purus. Fusce sollicitudin dictum sodales. Vivamus metus dui, feugiat a consectetur in, cursus nec leo. Nunc rhoncus viverra mauris sit amet euismod.
+
+        Quisque varius a tellus eget aliquet. Praesent neque lorem, pulvinar id fermentum id, sodales ac urna. Vivamus ullamcorper libero sed nunc viverra imperdiet. Phasellus nec tincidunt leo. Ut scelerisque lorem elit, a maximus tortor ullamcorper a. Pellentesque vel commodo tortor, sed vulputate est. Sed in odio tellus. Aenean euismod lacus eu fermentum efficitur. Nam pellentesque elit nisi, vel consequat mauris ornare ac. Phasellus non rhoncus magna. Suspendisse iaculis risus eget porta egestas.
+
+        Curabitur et nulla sagittis, auctor dolor nec, consectetur arcu. Fusce volutpat egestas turpis eget ultricies. Nullam eu consectetur tellus. Quisque efficitur elit eget imperdiet tempus. Etiam nec semper dui, sit amet venenatis eros. Ut ut scelerisque odio, vel suscipit erat. Sed placerat quis felis a cursus. Sed ut rutrum neque. Nullam arcu orci, aliquam ut nibh vitae, rhoncus congue enim. Nam elit ante, imperdiet ut pulvinar at, ornare in sem.
+
+        Ut lorem velit, sodales at elementum ac, venenatis commodo lectus. Praesent quis nisl ipsum. Nulla gravida ac risus quis lobortis. Quisque lacus leo, mattis eu elit eu, dapibus tristique leo. Vivamus interdum facilisis nisl, eget dictum nulla finibus sed. Praesent ultricies, nulla vel porttitor malesuada, turpis nunc ullamcorper ipsum, id ultricies urna dolor in odio. Fusce et mi id libero euismod euismod. Cras pulvinar libero vel sem auctor, id ornare quam suscipit. Maecenas vulputate semper magna vel mollis. Sed auctor, sapien in pellentesque tincidunt, ligula sapien elementum dui, eu dictum felis quam quis arcu. Morbi sit amet metus et felis convallis interdum sit amet sit amet leo. Mauris in tincidunt sem, ac pharetra tortor. Suspendisse potenti. Etiam non magna non tortor facilisis varius ultrices in tellus.
+	</p>
 </div>
