--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -16,12 +16,20 @@
     <script src="~/Scripts/javascript.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>    	
 </head>
-<body>
+<body>		
     <div id="wrapper">  
 		<!--Header-->
 		<header>
-
+            <h1>Software Portolio - John Mulhall</h1>	
 		</header>
+		<nav>
+            <div id="navbar">
+                <h3>Menu</h3>   
+                <ul>
+                    <li></li>
+                </ul>
+            </div>
+		</nav>		
 		<!--Main Body/Views-->	
         <main>
 		    @RenderBody()
