--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -6,14 +6,14 @@
 	<meta name="description" content="Software Portolio MVC Web App showing the Portfolio of John Mulhall"/>
 	<meta name="keywords" content="software, development, csharp, asp.net, java, writing, html5, css3, javascript, mvc, databases, postgresql, mysql, sqlserver, frameworks, technology, azure, oop"/>
 	<meta name="author" content="John Mulhall"/>	
-	<meta name="image" src="~/Images/imgCoderJohn.jpg" alt="Image of John Coding at DBS, Dublin, Ireland"/>	
+	<!--<meta name="image" src="~/Images/imgCoderJohn.jpg" alt="Image of John Coding at DBS, Dublin, Ireland"/>	-->
     <title>@ViewBag.Title - Software Portfolio</title>	
     <!--Favicon-->
     <link rel="shortcut icon" href="~/Images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="~/Images/favicon.ico" type="image/x-icon">   
 	<!--CSS/JS Files-->	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="~/Scripts/javascript.js" type="text/javascript"></script>
+    <script src="~/Scripts/Javascript.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>    	
 </head>
 <body>		
@@ -21,15 +21,35 @@
 		<!--Header-->
 		<header>
             <h1>Software Portolio - John Mulhall</h1>	
-		</header>
-		<nav>
-            <div id="navbar">
-                <h3>Menu</h3>   
-                <ul>
-                    <li></li>
-                </ul>
-            </div>
-		</nav>		
+        </header>
+		<!--Navbar-->	
+		<div id="nav_wrapper"> 	
+            <div id="navbar_tab" onclick="openNav()"> <h3>Menu</h3></div>
+			<div id="nav">	
+    			<!--Restricted Navbar > 768px-->	
+        	    <nav id="unrestricted_nav">	
+                    <ul>
+                        <li><a>@Html.ActionLink("Home", "Index", "Home")</a></li>
+        	            <li><a>@Html.ActionLink("About John", "Index", "About")</a></li>
+        			    <li><a>@Html.ActionLink("Resume","Index","Resume")</a></li>
+        			    <li><a>@Html.ActionLink("Irish Tech News","Index","IrishTechNews")</a></li>
+        			    <li><a>@Html.ActionLink("Contact John","Index","Contact")</a></li>	
+                    </ul>
+        	    <a href="javascript:void(0)" id="btn_close" onclick="closeNav()"><p>Close Menu</p></a>
+                </nav>	
+    		    <!--Restricted Navbar < 768px-->
+                <nav id="restricted_nav">  
+                    <ul>
+                        <li><a>@Html.ActionLink("Home", "Index", "Home")</a></li>
+                        <li><a>@Html.ActionLink("About", "Index", "About")</a></li>
+                        <li><a>@Html.ActionLink("Resume","Index","Resume")</a></li>
+                        <li><a>@Html.ActionLink("ITN Writing","Index","IrishTechNews")</a></li>
+                        <li><a>@Html.ActionLink("Contact","Index","Contact")</a></li>  
+                    </ul>
+                <a href="javascript:void(0)" id="btn_close" onclick="closeNav()"><p>Close Menu</p></a>
+                </nav>  
+			</div>		
+        </div>	
 		<!--Main Body/Views-->	
         <main>
 		    @RenderBody()
