--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link rel="icon" href="~/Images/favicon.ico" type="image/x-icon">   
 	<!--CSS/JS Files-->	
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="~/Scripts/Javascript.js" type="text/javascript"></script>
+    <script src="~/Scripts/JSSFile.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="~/Content/Style.css"/>    	
 </head>
 <body>		
