14th Commit - Responsive Styling  of Shared Layout

--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
             </ul>  
 			<!--Center of footer-->
             <ul id="footer_contact_details">
-			    <li><a><strong>Email:</strong> johnmlhll@yahoo.com</a></li>
+			    <li><a><strong>Email:</strong>  johnmlhll@yahoo.com</a></li>
 				<li><a><strong>Mobile:</strong> +353 (0) 86 231 7352</a></li>
 				<li>
 					<a href="https://twitter.com/johnmlhll" target="_blank">
@@ -84,7 +84,6 @@
 						<img src="~/Images/imgConnectLinkedIn.png" alt="LinkedIn Profile Link of John Mulhall"/>
 					</a>
 				</li>
-                <li><a><sub>&copy; John Mulhall 2017</sub></a></li> 
 			</ul>
 			<!--Right Hand Side of footer-->
 			<div id="twitter_container">	
@@ -101,6 +100,7 @@
     				</li>
     			</ul>
 			</div>
+			<div id="copyright"><sub>&copy; John Mulhall 2017</sub></div>	
 		</footer>
 	</div>
 </body>
