--- a/ProjectPortfolio/Content/Style.css
+++ b/ProjectPortfolio/Content/Style.css
@@ -4,9 +4,9 @@
 /*General Styling*/
 body {
     margin: 0 auto;
-    background-image: url("https://images2.alphacoders.com/816/thumb-1920-81652.jpg");
+    background-image: url("https://images2.alphacoders.com/816/thumb-1920-81652.jpg"); 
     background-repeat: round;
-    background-color: 4fed34;
+    background-color: #a2d6d6;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #4d4d4d;
 }
@@ -25,6 +25,12 @@ body {
     background: linear-gradient(#f9fcfc, #a2d6d6);
 }
 
+main {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    padding: 0.5%;
+    resize: both;
+}
 h1 {
     font-size: 1.8em;
     font-weight: bold;
@@ -176,6 +182,11 @@ footer hr {
         padding-top: 0.1%;
     }
 
+#copyright {
+    float: left;
+    margin: -2% 0 3% 0;
+}
+
 /*Middle of Footer*/
 #footer_contact_details {
     box-sizing: content-box;
@@ -194,19 +205,15 @@ footer hr {
         #footer_contact_details li a img {
             width: 22%;
             min-width: 40px;
-            padding-top: 0.5%;
+            padding: 1.5% 1% 2% 1%;
         }
-
-    #footer_contact_details li a sub {
-        padding-left: 2%; /*centers copyright under centact details*/
-    }
 
 /*Right of Footer*/
 #twitter_container {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     float: right;
-    width: 16%;
+    width: 18%;
     margin: -12% 2% 2% 3%;
 }
 
@@ -225,9 +232,13 @@ footer hr {
         border-color: lightgray;
     }
 
+#copyright {
+    text-align: center;
+}
 /* Restricted Styling - 800px max Screen*/
 @media only screen and (max-width: 800px) {
-    /*Responsive <800px General Styling */
+    
+    /*Responsive (<800px) - General Styling*/
     body {
         background-image: none;
     }
@@ -265,7 +276,7 @@ footer hr {
         line-height: normal;
     }
 
-    /*Responsive <800px Navbar Styling*/
+    /*Responsive (<800px) - Navbar Styling*/
     #restricted_nav { /* <800px */
         display: inline-block;
     }
@@ -279,7 +290,7 @@ footer hr {
         box-sizing: border-box;
         -webkit-box-sizing: border-box;
         position: fixed;
-        margin: 7% 1% 5% 0;
+        margin: 7% 1% 10% 0;
         position: fixed;
         min-width: 80px;
         min-height: 50px;
@@ -289,7 +300,97 @@ footer hr {
         transform:rotate(90deg);
         margin-top: 50%;
     }
+
+    /*Responsive Styling (<800px) - Footer*/
+    footer {
+        position: relative;
+        width: 100%;
+        display: block;
+        font-size: 1em;
+        clear: both;
+    }
+
+        footer hr {
+            width: 90%;
+            margin: 0 auto;
+        }
+
+    /*Responsive Styling (<800px) - Top of Footer*/
+    #logo {
+        align-content: center;
+        margin: 5% 45% 1% 45%;
+        width: 100%;
+    }
+
+    #footer_shares_linkedin {
+        clear:both;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        list-style-type: none;
+        float: left;
+        margin: 1% auto;
+        width: 40%;
+    }
+
+        #footer_shares_linkedin li a img {
+            border-radius: 40% 40% 0 0;
+            border: ridge;
+            border-color: lightgray;
+            width: 40%;
+        }
+
+    /*Responsive Styling (<800px) - Middle of Footer*/
+    #footer_contact_details {
+        box-sizing: content-box;
+        -webkit-box-sizing: content-box;
+        position: relative;
+        list-style-type: none;
+        font-weight: normal;
+        text-align: center;
+        margin: -2% 1% 1% 27%;
+    }
+
+        #footer_contact_details li a {
+            font-size: 1em;
+        }
+
+            #footer_contact_details li a img {
+                width: 23%;
+                min-width: 40px;
+            }
+
+    /*Responsive Styling (<800px) - Bottom of Footer*/
+    #twitter_container {
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        float: right;
+        width: 60%;
+        margin: 1% 6% 1% 1%;
+    }
+
+    #footer_shares_twitter { /*also Styles Facebook share button*/
+        list-style-type: none;
+        padding-bottom: 1%;
+        display: block;
+    }
+
+        #footer_shares_twitter li a img {
+            position: relative;
+            resize: both;
+            width: 40%;
+            border-radius: 40% 40% 0 0;
+            border: ridge;
+            border-color: lightgray;
+        }
+
+    #copyright {
+        width: 100%;
+        clear: both;
+        margin: 1% 40% 1% 40%;
+        text-align: left;
+    }
 }
+
 /* Restricted Styling - 500px max Screen*/
 @media only screen and (max-width: 500px) {
     h1 {
@@ -318,12 +419,33 @@ footer hr {
         line-height: normal;
     }
 
-    /*Responsive <500px Navbar Styling*/
+    /*Responsive (<500px) Navbar Styling*/
     #restricted_nav { /* <500px */
         display: inline-block;
     }
 
     #unrestricted_nav { /* >500px */
         display: none;
+    }
+
+    /* Responsive(<500px) Footer Styling */
+    #logo {
+
+    }
+
+    #footer_contact_details {
+
+    }
+
+     #footer_contact_details li a img {
+
+    }
+
+    #footer_shares_twitter li a img {
+
+    }
+
+    #footer_shares_linkedin li a img {
+
     }
 }
