--- a/ProjectPortfolio/Content/Style.css
+++ b/ProjectPortfolio/Content/Style.css
@@ -68,7 +68,7 @@ p, li {
     -webkit-box-sizing: border-box;
     position: fixed;
     display: inline;
-    margin: 7% 1% 10% -5%;
+    margin: 8% 1% 10% -5%;
     padding: 1%;
     opacity: 0.5;
     border-bottom-right-radius: 20%;
@@ -117,7 +117,7 @@ p, li {
                 text-decoration: none;
                 color: #0d0d0d;
                 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-                font-size: 1em;
+                font-size: 1.1em;
                 margin: 0.5% auto;
                 padding: 1%;
                 text-align: center;
@@ -292,8 +292,8 @@ footer hr {
         position: fixed;
         margin: 7% 1% 10% 0;
         position: fixed;
-        min-width: 80px;
-        min-height: 50px;
+        min-width: 60px;
+        min-height: 30px;
     }
 
     #navbar_tab h3 {
@@ -318,25 +318,17 @@ footer hr {
     /*Responsive Styling (<800px) - Top of Footer*/
     #logo {
         align-content: center;
-        margin: 5% 45% 1% 45%;
+        margin: 2% 45% 1% 45%;
         width: 100%;
     }
 
-    #footer_shares_linkedin {
-        clear:both;
-        box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        list-style-type: none;
-        float: left;
-        margin: 1% auto;
-        width: 40%;
+    #footer_shares_linkedin li a {
+        margin: 10% 34.5% 1% 34.5%;
+        width: 100%;
     }
 
-        #footer_shares_linkedin li a img {
-            border-radius: 40% 40% 0 0;
-            border: ridge;
-            border-color: lightgray;
-            width: 40%;
+         #footer_shares_linkedin li a img {
+            display: none;
         }
 
     /*Responsive Styling (<800px) - Middle of Footer*/
@@ -347,15 +339,19 @@ footer hr {
         list-style-type: none;
         font-weight: normal;
         text-align: center;
-        margin: -2% 1% 1% 27%;
+        margin: 0.5% 1% 1% 27%;
     }
 
         #footer_contact_details li a {
-            font-size: 1em;
+            font-size: 1.1em;
         }
 
+            #footer_contact_details li a strong {
+                font-stretch:condensed;
+            }
+
             #footer_contact_details li a img {
-                width: 23%;
+                width: 26%;
                 min-width: 40px;
             }
 
@@ -363,9 +359,9 @@ footer hr {
     #twitter_container {
         box-sizing: border-box;
         -webkit-box-sizing: border-box;
-        float: right;
+        clear: both;
         width: 60%;
-        margin: 1% 6% 1% 1%;
+        margin: 0 8% 0 8%;
     }
 
     #footer_shares_twitter { /*also Styles Facebook share button*/
@@ -393,6 +389,7 @@ footer hr {
 
 /* Restricted Styling - 500px max Screen*/
 @media only screen and (max-width: 500px) {
+    /*Responsive (<500px) - General Styling*/
     h1 {
         font-size: 1.3em;
         font-weight: bold;
@@ -428,24 +425,64 @@ footer hr {
         display: none;
     }
 
-    /* Responsive(<500px) Footer Styling */
-    #logo {
-
+    #nav_wrapper {
+        display: inline;
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        position: fixed;
+        margin: 7% 1% 10% 0;
+        position: fixed;
+        min-width: 60px;
+        min-height: 30px;
     }
 
+    /* Responsive(<500px) - Footer Styling */
+
+    /*Responsive Styling (<500px) - Left to Middle of Footer*/
     #footer_contact_details {
-
+        box-sizing: content-box;
+        -webkit-box-sizing: content-box;
+        position: relative;
+        list-style-type: none;
+        font-weight: normal;
+        text-align: center;
+        margin: 0.5% 1% 1% 1%;
+        width: 100%;
     }
 
-     #footer_contact_details li a img {
+        #footer_contact_details li a {
+            font-size: 1.0em;
+        }
 
+            #footer_contact_details li a strong {
+                display: none;
+            }
+
+            #footer_contact_details li a img {
+                width: 25%;
+                min-width: 40px;
+            }
+
+    /*Responsive Styling (<500px) - Right of Footer*/
+    #twitter_container {
+        box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        clear: both;
+        width: 100%;
     }
 
-    #footer_shares_twitter li a img {
-
+    #footer_shares_twitter { /*also Styles Facebook share button*/
+        list-style-type: none;
+        clear: both;
+        width: 60%;
+        margin: -16% 10% 0 70%;
+        position: relative;
     }
 
-    #footer_shares_linkedin li a img {
+        #footer_shares_twitter li a img {
+            border-radius: 40% 40% 0 0;
+            border: ridge;
+            border-color: lightgray;
+        }
 
-    }
 }
