--- a/ProjectPortfolio/Views/Shared/_Layout.cshtml
+++ b/ProjectPortfolio/Views/Shared/_Layout.cshtml
@@ -20,7 +20,11 @@
     <div id="wrapper">  
 		<!--Header-->
 		<header>
-            <h1>Software Portolio - John Mulhall</h1>	
+            <h1><sup>Scientia Deo Est</sup></h1>
+		    <h1>Software Portolio John Mulhall</h1>	
+			<a id="github_profile" href="https://github.com/johnmlhll" target="_blank">
+				<img src="~/Images/imgGithubProfile.png" alt="image of GitHub with link to profile"/>
+			</a>	
         </header>
 		<!--Navbar-->	
 		<div id="nav_wrapper"> 	
